--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
         <h1>refugee_project.</h1>
       </header>
       <nav class="nav-login">
-        <%= render partial: "layout/login" if user_signed_in? %>
+        <%= render partial: "layouts/login" if user_signed_in? %>
       </nav>
     </nav>
     <% if flash[:success] %>
