Admin can create a user

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,9 @@
     <% if flash[:error] %>
       <div class="notice"><%= flash[:error].html_safe %></div>
     <% end %>
+    <% if flash[:notice] %>
+      <div class="notice"><%= flash[:notice].html_safe %></div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
