--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,10 +1,15 @@
-<h2>Sign up</h2>
+<h2>Create a new user</h2>
 
-<%= form_for(@user, url: registration_path(@user)) do |f| %>
+<%= form_for([:admin, @user]) do |f| %>
 
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :username %><br />
+    <%= f.text_field :username, autofocus: true, autocomplete: "email" %>
   </div>
 
   <div class="field">
@@ -17,7 +22,11 @@
     <%= f.text_field :last_name, autofocus: true, autocomplete: "off" %>
   </div>
 
+  <div class="field">
+    <%= f.hidden_field :password, value: "defaultdefault" %>
+  </div>
+
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Create User" %>
   </div>
 <% end %>
