--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+
+ .info-button {
+
+ }
+
+ .hidden-info {
+   display: none;
+ }
+
+ .info-table {
+   display: flex;
+ }
