--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
         <h1>refugee_project.</h1>
       </header>
       <nav class="nav-login">
+        <%= render partial: "layouts/admin-nav" if current_admin? %>
+        <%= render partial: "layouts/nav" unless current_user.nil? %>
         <%= render partial: "layouts/login" if user_signed_in? %>
       </nav>
     </nav>
