Build out some fixes for some minor issues

--- a/app/views/layouts/_login.html.erb
+++ b/app/views/layouts/_login.html.erb
@@ -1,1 +1,1 @@
-Welcome, <%= current_user.first_name %>. Please <%= link_to "logout", destroy_user_session_path, method: "destroy" %> <b>before</b> leaving.
+Welcome, <%= current_user.first_name %>. Please <%= link_to "logout", logout_path, method: "destroy" %> <b>before</b> leaving.
