--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,9 @@
 
  body {
    margin: 0px;
+   height: 100%;
+   width: 100%;
+   font-family: Roboto;
  }
 
  .info-button {
@@ -28,4 +31,197 @@
 
  .info-table {
    display: flex;
+ }
+
+ /* .main-hero {
+   margin: 0px;
+   background: url('https://images.unsplash.com/photo-1521295121783-8a321d551ad2?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=686e4856c06faee93838d73a7b9edfc9&auto=format&fit=crop&w=1650&q=80') no-repeat center center fixed;
+   background-repeat: no-repeat;
+   background-size: cover;
+   height: 764px;
+   width: 100%;
+   position: absolute;
+ }
+
+ .main-container {
+   display: flex;
+   justify-content: center;
+   margin-top: 300px;
+   margin-left: 75px;
+   flex-direction: column;
+   color: white;
+ }
+
+ .main-logo {
+   color: white;
+   font-size: 40px;
+   font-family: Anton;
+ }
+
+ .main-login {
+   margin-left: 45px;
+   margin-top: 30px;
+ }
+
+ .main-login a, a:visited {
+    background-color: #F4A966;
+    color: white;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+ }
+
+ .main-login a:hover, a:active {
+    background-color: #ECBC8F;
+ }
+
+ .main-container h2 {
+   color: white;
+   font-size: 35px;
+   font-family: Anton;
+ }
+
+ .actions input {
+   background-color: #F4A966;
+   color: white;
+   padding: 14px 25px;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   margin-top: 10px;
+ }
+
+ .field input {
+   font-size: 20px;
+   text-decoration: none;
+   display: inline-block;
+ } */
+
+ /* .main-hero {
+   margin: 0px;
+   background: url('https://images.unsplash.com/photo-1501715016572-06e6bad48a01?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=838b8b1a567cd2dcbc3256901e773353&auto=format&fit=crop&w=1650&q=80') no-repeat center center fixed;
+   background-repeat: no-repeat;
+   background-size: cover;
+   height: 764px;
+   width: 100%;
+   position: absolute;
+ }
+
+ .main-container {
+   display: flex;
+   justify-content: center;
+   margin-top: 300px;
+   margin-left: 75px;
+   flex-direction: column;
+ }
+
+ .main-logo {
+   font-size: 40px;
+   font-family: Anton;
+ }
+
+ .main-login {
+   margin-left: 45px;
+   margin-top: 30px;
+ }
+
+ .main-login a, a:visited {
+    background-color: #ED8FC4;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+ }
+
+ .main-login a:hover, a:active {
+    background-color: #EFA0CB;
+ }
+
+ .main-container h2 {
+   font-size: 35px;
+   font-family: Anton;
+ }
+
+ .actions input {
+   background-color: #ED8FC4;
+   padding: 14px 25px;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   margin-top: 10px;
+ }
+
+ .field input {
+   font-size: 20px;
+   text-decoration: none;
+   display: inline-block;
+ } */
+
+ .main-hero {
+   margin: 0px;
+   background: url('https://images.unsplash.com/photo-1513759565286-20e9c5fad06b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=30baad7b9baa881f90b4f07941c2afe3&auto=format&fit=crop&w=1650&q=80') no-repeat center center fixed;
+   background-repeat: no-repeat;
+   background-size: cover;
+   height: 764px;
+   width: 100%;
+   position: absolute;
+ }
+
+ .main-container {
+   display: flex;
+   justify-content: center;
+   margin-top: 250px;
+   margin-left: 75px;
+   flex-direction: column;
+ }
+
+ .main-logo {
+   font-size: 40px;
+   font-family: Anton;
+ }
+
+ .main-login {
+   margin-left: 45px;
+   margin-top: 30px;
+ }
+
+ .main-login a, a:visited {
+   font-family: Fjalla One;
+   background-color: #000000;
+   color: white;
+   padding: 10px 18px;
+   text-align: center;
+   font-size: 25px;
+   text-decoration: none;
+   display: inline-block;
+   border-radius: 5%;
+ }
+
+ .main-login a:hover, a:active {
+   background-color: #343434;
+ }
+
+ .main-container h2 {
+   font-size: 35px;
+   font-family: Anton;
+   margin-bottom: 10px;
+ }
+
+ .actions input {
+   font-family: Fjalla One;
+   background-color: #000000;
+   color: white;
+   padding: 7px 14px;
+   margin-top: 10px;
+   text-align: center;
+   font-size: 20px;
+   text-decoration: none;
+   display: inline-block;
+ }
+
+ .field input {
+   font-size: 20px;
+   text-decoration: none;
+   display: inline-block;
  }
