--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,3 @@
-refugee_project.
+<%= render partial: 'home' if !user_signed_in? %>
 
-<%= link_to "Login", new_user_session_path %>
+<%= render partial: 'dashboard' if user_signed_in? %>
