--- a/app/views/layouts/_admin-nav.html.erb
+++ b/app/views/layouts/_admin-nav.html.erb
@@ -1,4 +1,2 @@
-<ul>
-  <li><%= link_to "Create new User", new_admin_user_path %></li>
-  <li><%= link_to "Create new Request", new_request_path %></li>
-</ul>
+<%= link_to "Create new User", new_admin_user_path %><br>
+<%= link_to "Create new Request", new_request_path %><br>
