--- a/app/views/admin/requests/index.html.erb
+++ b/app/views/admin/requests/index.html.erb
@@ -1,3 +1,7 @@
-<% @requests.each do |request| %>
-  <%= request.id %>
-<% end %>
+<section class="body-container">
+  <article class="body-main">
+    <% @requests.each do |request| %>
+      <%= request.id %>
+    <% end %>
+  </article>
+</section>
