--- a/app/views/layouts/_admin-nav.html.erb
+++ b/app/views/layouts/_admin-nav.html.erb
@@ -1,2 +1,1 @@
-<%= link_to "Create new User", new_admin_user_path %><br>
-<%= link_to "Create new Request", new_request_path %><br>
+<%= link_to "Register a New User", new_admin_user_path, class: "link" %>
