--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,1 +1,7 @@
-<%= render partial: "form" %>
+<section class="body-container">
+  <article class="body-main">
+    <h2>Enter in all known attributes to locate a refugee</h2>
+
+    <%= render partial: "form" %>
+  </article>
+</section>
