--- a/app/views/layouts/_login.html.erb
+++ b/app/views/layouts/_login.html.erb
@@ -1,1 +1,1 @@
-Please <%= link_to "logout", destroy_user_session_path, method: :delete %> <b>before</b> leaving.
+<%= link_to "Logout", destroy_user_session_path, method: :delete, class: 'link' %>
