--- a/app/views/welcome/_dashboard.html.erb
+++ b/app/views/welcome/_dashboard.html.erb
@@ -1,10 +1,9 @@
+<section class="body-container">
+  <article class="body-main">
+    <h2>Welcome <%= current_user.first_name %></h2>
+    <h1>There have been <%= current_user.requests_since_last_sign_in %> requests made since you last logged in.</h1>
+    <%= link_to "See all requests made", admin_requests_path if current_admin? %>
 
-  You are signed on as <%= current_user.username %>
-
-  <p><%= link_to "Make New Request", new_request_path %></p>
-
-  <p>Your past requests</p>
-
-  <% current_user.requests.each do |request| %>
-    Request ID: <%= link_to request.id, request_path(request) %>
-  <% end %>
+    <%= render partial: 'requests' if current_user.has_requests? %>
+  </article>
+</section>
