--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -206,5 +206,30 @@
  }
 
  .request-card {
-   
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   border: 2px solid #B2827F;
+   margin: 30px;
+   width: 375px;
+   height: 175px;
+ }
+
+ .request-card h2 {
+   color: #B2827F;
+ }
+
+ .deceased {
+   color: #C8474E;
+ }
+
+ .found {
+   color: #4D7352;
+ }
+
+ .card-container {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: center
  }
