--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -2,7 +2,7 @@
   <article class="body-main">
     <section class="card-container">
       <request class="request-card">
-        <div class="request-id">Request ID:</div><div><%= @request.id %></div>
+        <div class="request-name"><%= @request.name %></div>
         <h2>Status: <status class="<%= @request.status.downcase %>"><%= @request.status %></h2>
       </request>
     </section>
