Fix minor styling issue

--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -12,7 +12,7 @@
 
   <div class="select">
     <%= f.label :gender %><br />
-    <%= f.select :gender, ["Cis-Male", "Cis-Female", "Trans-Male", "Trans-Female", "Non-Binary", "Intersex", "Other"] %>
+    <%= f.select :gender, ["Cis-Female", "Cis-Male", "Trans-Male", "Trans-Female", "Non-Binary", "Intersex", "Other"] %>
   </div>
 
   <div class="select">
