--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -53,6 +53,12 @@
    color: #B2827F;
  }
 
+ h4 {
+   color: black;
+   font-size: 2.5em;
+   margin: 10px;
+ }
+
  .info-button {
    background-color: #C39691;
    min-width: 100px;
