--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,6 +1,6 @@
 <section class="body-container">
   <article class="body-main">
-    <h2>Create a new user</h2>
+    <h2>Create a new investigator</h2>
 
     <%= render partial: 'form' %>
   </article>
