--- a/app/views/layouts/_admin-nav.html.erb
+++ b/app/views/layouts/_admin-nav.html.erb
@@ -1,1 +1,1 @@
-<%= link_to "Register a New User", new_admin_user_path, class: "link" %>
+<%= link_to "Register an Investigator", new_admin_user_path, class: "link" %>
