--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -25,6 +25,6 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Create User" %>
+    <%= f.submit "Create Investigator" %>
   </div>
 <% end %>
