--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,2 +1,2 @@
-<%= link_to "Find a Family", new_request_path, class: "link" %>
+<%= link_to "Find Families", new_request_path, class: "link" %>
 <%= link_to "Home", root_path, class: "link" %>
