Sal: Lol just push it to master haha

--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -6,7 +6,7 @@
         <h2>Status: <status class="<%= @request.status.downcase %>"><%= @request.status %></h2>
       </request>
     </section>
-    <button class="info-button">See More Info?</button>
+    <button class="info-button">See More Info</button>
     <section class="hidden-info">
       <table>
         <tr>
