--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -64,6 +64,12 @@
    font-size: 12pt;
  }
 
+ h6 {
+   color: #B2827F;
+   font-size: 2.2em;
+   margin-bottom: 30%;
+ }
+
  .info-button {
    background-color: #C39691;
    min-width: 100px;
@@ -77,6 +83,8 @@
  .hidden-info {
    display: none;
  }
+
+ 
 
  .info-table {
    display: flex;
@@ -304,6 +312,17 @@
 
  .request-name {
    font-size: 1.6em;
+ }
+
+ .nothing {
+   background-image: url('https://images.unsplash.com/photo-1496829096485-5573086ebfbc?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=f64cb24281a88de1567fa6dd1c00dd95&auto=format&fit=crop&w=1650&q=80');
+   width: 40%;
+   height: 40%;
+   background-size: cover;
+   background-repeat: no-repeat;
+   display: flex;
+   justify-content: center;
+   align-items: center;
  }
 
  table {
