--- a/app/views/admin/requests/index.html.erb
+++ b/app/views/admin/requests/index.html.erb
@@ -1,10 +1,13 @@
 <section class="body-container">
   <article class="body-main">
+    <h2>All Requests</h2>
+    <%= render partial: 'layouts/cannot-locate' if @requests.empty? %>
     <section class="card-container">
       <% @requests.each do |request| %>
         <request class="request-card">
           <div class="request-name"><%= link_to request.name, request_path(request) %></div>
-          <h2>Status: <status class="<%= request.status.downcase %>"><%= request.status %></h2>
+          <h2>Status: <status class="<%= request.status.downcase %>"><%= request.status %></status></h2>
+          <h3>Request made by <%= request.user.first_name %></h3>
         </request>
       <% end %>
     </section>
