--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -3,7 +3,8 @@
     <section class="card-container">
       <request class="request-card">
         <div class="request-name"><%= @request.name %></div>
-        <h2>Status: <status class="<%= @request.status.downcase %>"><%= @request.status %></h2>
+        <h2>Status: <status class="<%= @request.status.downcase %>"><%= @request.status %></status></h2>
+        <h3>Request made by <%= @request.user.first_name %></h3>
       </request>
     </section>
     <button class="info-button">See More Info</button>
