Fix failing test

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -84,7 +84,21 @@
    display: none;
  }
 
- 
+ .shown {
+   display: flex;
+ }
+
+ .hidden {
+   display: none;
+ }
+
+ .password {
+   display: none;
+ }
+
+ .hide-password {
+   
+ }
 
  .info-table {
    display: flex;
