Fix some styling

--- a/app/views/admin/users/_user-created.html.erb
+++ b/app/views/admin/users/_user-created.html.erb
@@ -2,5 +2,5 @@
 <h3>Please send the following information so that they can log in</h3>
 <section class='login-instructions'>
   <p>Email: <a href='mailto:<%= @user.email %>'><%= @user.email %></a></p>
-  <p>Password: <div class="password"><%= @generated_password %></div></p>
+  <p>Password: <%= @generated_password %></p>
 </section>
