--- a/app/views/admin/requests/index.html.erb
+++ b/app/views/admin/requests/index.html.erb
@@ -7,7 +7,7 @@
         <request class="request-card">
           <div class="request-name"><%= link_to request.name, request_path(request) %></div>
           <h2>Status: <status class="<%= request.status.downcase %>"><%= request.status %></status></h2>
-          <h3>Request made by <%= request.user.first_name %></h3>
+          <h3>Request made by <%= link_to request.user.first_name, admin_user_path(request.user) %></h3>
         </request>
       <% end %>
     </section>
