Minor style changes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -256,6 +256,7 @@
  .body-container {
    display: flex;
    justify-content: center;
+   background: url('https://i.imgur.com/4KC9vUP.png');
    background-repeat: no-repeat;
    background-position: top left;
    background-size: 295px;
